@@ -5,6 +5,7 @@
     * Add Net::SSLeay::X509_VERIFY_PARAM#get_hostflags method.
     * Add Net::SSLeay::X509_VERIFY_PARAM#set1_email method.
     * Add Net::SSLeay::X509_VERIFY_PARAM#set1_ip_asc method.
+    * Add Net::SSLeay::X509_VERIFY_PARAM#new method.
   [Changes]
     * Change the default value of $namele in Net::SSLeay::X509_VERIFY_PARAM#set1_host method.
       [Before]
